# API-Forge-AI

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  deployment_checklist.md  deployment_report.md  docker-compose.yml  prompt_audit_report.md  push_readiness_assessment.md  railway.toml  render.yaml  repository_audit_report.md  security_audit_report.md
backend/: .env.example  3_endpoint_spec.yaml  Dockerfile  apiforge.db  audit_results.txt  build.sh  check_ec03.py  check_jobs.py  check_logs.py  check_recent.py  check_state.py  deployment_test_spec.yaml  fix.py  fix_indent.py  inspect_artifact.py  mock_api.py  pyproject.toml  setup_checkpoints.py  test_capability.py  test_checkpoint_recovery.py  test_checkpoint_state.py  test_checkpoint_state2.py  test_e2b.py  test_langgraph_checkpoint.py  test_langgraph_stream_interrupt.py  test_real_agent.py  test_results.md  test_stream_disconnects.py  test_verification.py
backend/alembic/: env.py
backend/alembic/versions/: 1be58d82328b_add_execution_log_duration_metrics.py  1f5cad08f1dd_initial_models.py
backend/app/: main.py
backend/app/agents/: graph.py  nodes.py  state.py  tools.py
backend/app/api/: dashboard.py  download.py  stream.py  upload.py
backend/app/core/: config.py  database.py  db.py
backend/app/models/: domain.py
backend/app/services/: llm_factory.py  openapi_parser.py  reliability.py  sdk_builder.py
backend/app/services/executor/: __init__.py  base.py  e2b.py  local.py
backend/scripts/: init_checkpointer.py
backend/tests/: test_relative_url.py
specs/: failure_recovery_api.yaml
(+6 files in other folders)
