[tool.poetry]
name = "apiforge-ai-backend"
version = "0.1.0"
description = "Backend for APIForge AI"
authors = ["APIForge <info@apiforge.ai>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
pyyaml = "^6.0.1"
python-multipart = "^0.0.9"
langgraph = "^0.2.0"
langchain-openai = "^0.2.1"
langchain-anthropic = "^0.2.1"
langchain-groq = "*"
e2b-code-interpreter = "*"
redis = "^5.0.8"
langgraph-checkpoint-postgres = "^2.0.0"
psycopg = "^3.3.4"
psycopg-pool = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
